# ros_etsi_its_msgs

./: AUTHORS.md  CMakeLists.txt  LICENSE  README.md  package.xml
.github/workflows/: build-deb.yml  ci.yml  main.yml
include/etsi_its_msgs/plugin/: DeltaReferencePosition.h
msg/: Altitude.msg  BasicVehicleContainerHighFrequency.msg  CAM.msg  CBR.msg  CPM.msg  Connection.msg  Curvature.msg  DENM.msg  DeltaReferencePosition.msg  DynamicStatus.msg  EventPoint.msg  ExteriorLights.msg  GenericLane.msg  Heading.msg  IntersectionGeometry.msg  IntersectionState.msg  Intersections.msg  ItsPduHeader.msg  LateralAcceleration.msg  ListOfPerceivedObjects.msg  LocationContainer.msg  LongitudinalAcceleration.msg  MAPEM.msg  MatchedPosition.msg  MovementEvent.msg  MovementState.msg  NodeSetXY.msg  ObjectClassDescription.msg  ObjectDimension.msg  ObjectDistanceWithConfidence.msg  ObjectRefPoint.msg  OriginatingVehicleContainer.msg  PathPoint.msg  PerceivedObject.msg  PositionConfidenceEllipse.msg  ReferencePosition.msg  SPATEM.msg  SensorInformation.msg  SensorInformationContainer.msg  Speed.msg  (+6 more)
