<?xml version="1.0"?>
<package format="2">
  <name>etsi_its_msgs</name>
  <version>0.2.0</version>
  <description>ROS equivalents of ETSI ITS messages, e.g. CAM and DENM</description>

  <maintainer email="raphael.riebl@thi.de">Raphael Riebl</maintainer>
  <license>BSD 3-clause</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>
</package>
